Remove unused exports flag for compilation